# nifti-rspy

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: lib.rs
