[package]
name = "nifti-rspy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nifti_rspy"
crate-type = ["cdylib"]

[dependencies]
image = "0.25.2"
ndarray = "0.15.6"
nifti = "0.16.0"
numpy = "0.21.0"
pyo3 = "0.21.0"
